# torosamy-robomaster-sdk-stable

./: .gitignore  README.md  install.sh  version.txt
config/: config.yml
config/camera/: 0.yml  DahuaCameraDemo.yml  MindCameraDemo.yml  VirtualCameraDemo.yml
config/module/example/: config.yml
config/serial-port/: 0.yml  1.yml
example/: CMakeLists.txt
example/include/example/: MyModule.h
example/include/example/packet/: MyReceiveDataPacket.h  MySendDataPacket.h
example/src/: MyModule.cpp  main.cpp
example/src/packet/: MyReceiveDataPacket.cpp  MySendDataPacket.cpp
include/module/: TorosamyModule.h
include/packet/: ColorType.h  DataPacket.h  ReceiveDataPacketInterface.h  SendDataPacketInterface.h
include/pod/: SerialPort.h
include/pod/camera/: Camera.h  CameraType.h  VideoCamera.h  VirtualCamera.h
include/pod/camera/DahuaCamera/: DahuaCamera.h
include/pod/camera/DahuaCamera/GenICam/: AcquisitionControl.h  AnalogControl.h  Camera.h  Defs.h  DeviceControl.h  DigitalIOControl.h  ErrorCode.h  EventSubscribe.h  Frame.h  ISPControl.h  ImageFormatControl.h  ParameterNode.h  StreamSource.h  TransportLayerControl.h
include/pod/camera/DahuaCamera/Infra/: Assert.h  AtomicCount.h  CString.h  Error.h  File.h  Function.h  System.h  (+9 more)
include/pod/camera/MindCamera/: CameraStatus.h  MindCamera.h
include/pod/manager/: CameraManager.h  ModuleManager.h  ModuleManager.hpp  PacketManager.h  PacketManager.hpp  SerialPortManager.h
include/utils/: DataUtils.h  MessageUtils.h
lib/DahuaCamera/: SDKLOG_default.properties  libMVSDKGuiQt.so.1
rules/: 60-u3v-drv.rules
(+22 files in other folders)
